Implement User's Public Page (#32)
* [REAFACTORE]

* [ADD] Swagger

* [PRETTIER]

* [FIX] prettier error

* [FIX] some issues

* [ADD] case-insensitive username search

---------
